--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>E - Commerce Design 2 Documentation</title>
+    <title>Gini-eCom Documentation</title>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -24,7 +24,7 @@
                                 <a href="#">
                                     <img src="assets/images/logo.jpg" alt="">
                                 </a>
-                                <h3>E - Commerce design 2</h3>
+                                <h3>Gini-eCom</h3>
                             </div>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                             <div class="overlay"></div>
                             <div class="display-table">
                                 <div class="display-table-cell text-center heading-content">
-                                    <h2>E - Commerce Design 2 - Responsive HTML Template</h2>
+                                    <h2>"Gini-eCom" - Responsive HTML Template</h2>
                                     <p>please read the documentation carefully. hope you will be find all of your
                                         question. if you have more question which have not added here please feel free
                                         to contact with us from here <span style="color: red;text-transform: initial">example@gmail.com</span>
